--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <a href="https://www.linkedin.com/in/saranprakash/" target="_blank" class="icon-link" title="LinkedIn">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="resume.pdf" download class="resume-btn">Download Resume</a>
+                        <a href="J Saran Prakash - Resume.pdf" download class="resume-btn">Download Resume</a>
                     </div>
             </div>
         </div>
