--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
 </head>
 
 <script>
+    document.getElementById("contactForm").addEventListener("submit", function(event) {
+    event.preventDefault(); // Prevent actual form submission
+
+    let message = document.getElementById("message").value; 
+    let linkedInUrl = "https://www.linkedin.com/messaging/compose/";
+
+    // Open LinkedIn in a new tab
+    let newTab = window.open(linkedInUrl, "_blank");
+
+    // Copy the message to the clipboard
+    navigator.clipboard.writeText(message).then(() => {
+        alert("Message copied to clipboard. Paste it in LinkedIn chat!");
+    }).catch(err => {
+        console.error("Failed to copy text:", err);
+    });
+});
    document.addEventListener("DOMContentLoaded", function() {
     const sections = document.querySelectorAll("section");
     const options = {
